SONAR-7435 add sonar.ce.javaOpts and sonar.ce.javaAdditionalOpts
also enforce some JVM parameters